<resources>
    <string name="app_name">CommonsLibSample</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_toast_utils">Hello ToastUtils</string>
    <string name="toast_utils">ToastUtils</string>
    <string name="set">Set</string>
    <string name="name_is_set_to">Name is set to %s</string>
    <string name="model_preference">Model Preference</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
</resources>
